# BatmanComputerHack

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  docker-compose.yml  test
KnowledgeTree/: BinarySearch.cpp  BinarySearch.hpp  main.cpp
KnowledgeTree.xcodeproj/: project.pbxproj
KnowledgeTree.xcodeproj/project.xcworkspace/xcuserdata/guilhermesiani.xcuserdatad/: UserInterfaceState.xcuserstate
KnowledgeTree.xcodeproj/xcshareddata/xcschemes/: KnowledgeTree.xcscheme  TestKnowledgeTree.xcscheme
KnowledgeTree/Algorithms/: BubbleSort.cpp  BubbleSort.hpp  LinearSearch.cpp  LinearSearch.hpp
KnowledgeTree/KnowledgeTree/: main.cpp
KnowledgeTree/KnowledgeTree.xcodeproj/: project.pbxproj
TestKnowledgeTree/: testSampleClass.cpp
TestKnowledgeTree/Algorithms/: testBinarySearch.cpp  testBubbleSort.cpp  testLinearSearch.cpp
src/: main.cpp
src/Algorithms/: BinarySearch.cpp  BinarySearch.hpp  BubbleSort.cpp  BubbleSort.hpp  LinearSearch.cpp  SelectionSort.cpp  SelectionSort.hpp
src/Algorithms/Search/: BinarySearch.cpp  BinarySearch.hpp  LinearSearch.cpp  LinearSearch.hpp
src/Algorithms/Sort/: BubbleSort.cpp  BubbleSort.hpp  SelectionSort.cpp  SelectionSort.hpp
src/TDD/: Installment.cpp  Installment.hpp  Score.cpp  Score.hpp
tests/: main.cpp
tests/Algorithms/: testBinarySearch.cpp  testBubbleSort.cpp  testLinearSearch.cpp  testSelectionSort.cpp
tests/Algorithms/Search/: testBinarySearch.cpp  testLinearSearch.cpp
tests/Algorithms/Sort/: testBubbleSort.cpp  testSelectionSort.cpp
tests/TDD/: testInstallment.cpp  testScore.cpp
(+114 files in other folders)
